--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   font-size: 16px;
   line-height: 1.5;
   font-weight: 400;
-  background-color: #fffcfc;
+  background-color: #fff;
   color: #000;
 }
 
